# Gridswitcher_V2

./: .cproject  .gitignore  .project  CMakeLists.txt  Gridswitcher_V2.mex  README.md  ozone.jdebug
board_sdk/: linker_script.ld
board_sdk/drivers/: fsl_enet.c  fsl_lpspi.c  fsl_lpspi.h  fsl_lpspi_edma.c  fsl_lpspi_edma.h
board_sdk/drivers/flash/: fsl_flash.h
board_sdk/freertos/freertos-kernel/include/: FreeRTOS.h
board_sdk/lwip/port/: enet_configchecks.h  enet_ethernetif_lpc.c
cmake/: arm_gcc.cmake
hardware/GridSwitcher_PCB/: GridSwitcher_PCB.kicad_pcb  GridSwitcher_PCB.kicad_prl  GridSwitcher_PCB.kicad_pro  GridSwitcher_PCB.kicad_sch  fp-info-cache  fp-lib-table  mcxn947.kicad_sch  mosfet_drivers.kicad_sch  mosfet_sw.kicad_sch  psu.kicad_sch  sym-lib-table  ~GridSwitcher_PCB.kicad_sch.lck
hardware/GridSwitcher_PCB/Library.pretty/: 615004141121.kicad_mod  P3T1755DPZ.kicad_mod  R78K3305.kicad_mod  SOP50P490X110-10N.kicad_mod  SOT95P280X145-5N.kicad_mod  TBP02R138116BE.kicad_mod
hardware/GridSwitcher_PCB/libs/615004141121/KiCad/: 615004141121.kicad_mod  615004141121.kicad_sym
hardware/GridSwitcher_PCB/libs/ESDS304DBVR/KiCad/: ESDS304DBVR.bak  ESDS304DBVR.dcm  ESDS304DBVR.kicad_sym  SOT95P280X145-5N.kicad_mod
hardware/GridSwitcher_PCB/libs/FRDM-MCXN947/: FRDM-MCXN947__Shield_Template.kicad_prl
hardware/GridSwitcher_PCB/libs/INA237AIDGSR/INA237.pretty/: SOP50P490X110-10N.kicad_mod
hardware/GridSwitcher_PCB/libs/P3T1755DPZ/KiCad/: P3T1755DPZ.bak  P3T1755DPZ.dcm  P3T1755DPZ.kicad_mod  P3T1755DPZ.kicad_sym
hardware/GridSwitcher_PCB/libs/R-78K3.3-0.5/KiCad/: R-78K3.3-0.5.dcm  R-78K3_3-0_5.bak  R-78K3_3-0_5.kicad_sym  R78K3305.kicad_mod
hardware/GridSwitcher_PCB/libs/TBP02R1-381-16BE/3D/: TBP02R1-381-16BE.stp
hardware/GridSwitcher_PCB/libs/TBP02R1-381-16BE/KiCad/: TBP02R1-381-16BE.dcm  TBP02R1-381-16BE.kicad_sym  TBP02R138116BE.kicad_mod
hardware/GridSwitcher_PCB/libs/UCC27536DBVR/KiCad/: SOT95P280X145-5N.kicad_mod  UCC27536DBVR.bak  UCC27536DBVR.dcm  UCC27536DBVR.kicad_sym
html/css/: style.css
source/: FreeRTOSConfig.h  httpsrv_freertos.c  httpsrv_fs_data.c.c  lwip_httpsrv_freertos.c  lwipopts.h
